...
        UITabBar.appearance().barTintColor = .etoileBackground()
        UITabBar.appearance().tintColor = .etoileTextColor()
        UITabBar.appearance().unselectedItemTintColor = .etoileSecondaryTextColor()
        
        homeViewController.viewControllers = [HomeViewController()]
        homeViewController.tabBarItem = UITabBarItem(title: "Home", image: UIImage(systemName: "house"), tag: 0)
        homeViewController.tabBarItem.accessibilityIdentifier = "homeTabBarItem"
        
        albumsViewController.viewControllers = [AlbumsVerticalListViewController()]
        albumsViewController.tabBarItem = UITabBarItem(title: "Albums", image: UIImage(systemName: "rectangle.stack"), tag: 1)
        albumsViewController.tabBarItem.accessibilityIdentifier = "albumsTabBarItem"
        
        searchVC.viewControllers = [SearchViewController()]
        searchVC.tabBarItem = UITabBarItem(title: "Search", image: UIImage(systemName: "magnifyingglass"), tag: 0)
        searchVC.tabBarItem.accessibilityIdentifier = "searchTabBarItem"
        
        playlistVc.viewControllers = [PlayListHomeViewController()]
        playlistVc.tabBarItem = UITabBarItem(title: "Playlists", image: UIImage(systemName: "text.line.first.and.arrowtriangle.forward"), tag: 0)
        playlistVc.tabBarItem.accessibilityIdentifier = "playlistTabBarItem"
        
        viewControllers = [homeViewController, albumsViewController, playlistVc, searchVC]
...
