...
            make.left.equalTo(view).offset(20)
            make.top.equalTo(view).offset(20)
            make.centerY.equalTo(view)
            make.width.equalTo(view.snp.height).offset(-40)
        }
        
        songNameLabel.accessibilityIdentifier = "miniPlayerSongNameLabel"
        songNameLabel.font = .systemFont(ofSize: 16)
        songNameLabel.textColor = .etoileTextColor()
        
        view.addSubview(songNameLabel)
        
        songNameLabel.snp.makeConstraints { make in
...
