...

class SearchViewController: UIViewController {

    var items: [AlbumOrSong] = []
    var albums: [Album] = []
    var songs: [Song] = []
    let searchInput = UISearchBar()
    let tableView = UITableView()
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        // Getting library
...
